Xfdesktop 4.7.x
---------------

  * Fix a crash caused by accessing the wrong variable when adding
    items to the right-click menu.


Xfdesktop 4.7.2
---------------

  * Properly hide mounts that cannot be mounted by the user.
  * Make xfdesktop settings dialog translatable (bug #6771).
  * Translation updates: Finnish, Galician.


Xfdesktop 4.7.1
---------------

  * Port xfdesktop to GIO and drop the dependency on thunar-vfs. This
    is a major change which makes heavy use of new D-Bus methods
    introduced in Thunar 1.1.3.
  * Port xfdesktop to thunarx-2.
  * Translation updates: Portuguese, Basque, Italian, Danish, Kazakh,
    Galician, Catalan (Valencian), Spanish (Castilian), Swedish, 
    Finnish, Greek, Japanese, Ukrainian, Russian, Chinese (Taiwan),
    German, Uyghur.


Xfdesktop 4.7.0
---------------

  * Depend on exo-1 (0.5).
  * Drop dependency on libxfcegui4 and use libxfce4ui.
  * Remove the menu panel plugin, this is now included in the panel.
  * Remove various .desktop files for the menu, those are now
    included in the packages they belong to (exo, utils and session).
  * Remove the .directory files, those are now shipped with Garcon.
  * Drop the libxfce4menu dependency and use Garcon.
  * Build documentation during make dist.
  * Allow DnD to image list in settings dialog (bug 4337).
  * Refactor drawing routines in XfdesktopIconView to remove most
    flicker and most if not all repaint glitches.
  * Use cairo to draw the rounded text label background instead of
    the hacky PNG composition method.
  * Make the text label corner roundness configurable via a gtkrc
    style property.
  * Call to org.xfce.FileManager.DisplayFileProperties() for the
    full-featured file properties dialog before falling back to our
    own (bug 5622).
  * Translation updates: ca, kk, pt, it, da, zh_TW, de, he, id, hr,
    fr, ru, si.


Xfce 4.6.2
----------

  * Build fixes for GIT.
  * Rebuild doc directory.