@@ -3,6 +3,8 @@ Xfdesktop 4.7.x
 
   * Fix a crash caused by accessing the wrong variable when adding
     items to the right-click menu.
+  * Select the correct icon style in the desktop settings on first 
+    start (bug #6798).
 
 
 Xfdesktop 4.7.2
